--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"name": "SEO Meta Helper",
 	"version": "0.7",
 	"manifest_version": 2,
-	"description": "Analyze and highlight the keywords on the page and meta tags",
+	"description": "Analyze and highlight the keywords and meta tags on the page",
 	"homepage_url": "https://chrome.google.com/webstore/category/extensions",
 	"page_action": {
 		"default_icon": "icon.png",
@@ -26,5 +26,4 @@
       "js": ["content_script.js"]
     }
   ]
-	//"permissions": [ "tabs", "http://*/*", "https://*/*" ]
 }
