--- a/manifest.json
+++ b/manifest.json
@@ -18,10 +18,11 @@
 	},
 	"permissions": ["tabs", "storage", "<all_urls>"],
 	"content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-	  "css": ["fix.css"],
-      "js": ["content_script.js"]
-    }
-  ]
+        {
+          "matches": ["<all_urls>"],
+          "css": ["fix.css"],
+          "js": ["content_script.js"]
+        }
+    ],
+    "web_accessible_resources": ["copy.svg"]
 }
