--- a/manifest.json
+++ b/manifest.json
@@ -1,28 +1,26 @@
 ﻿{
-	"update_url":"http://clients2.google.com/service/update2/crx",
+	"update_url": "http://clients2.google.com/service/update2/crx",
 	"name": "SEO Meta Helper",
 	"version": "0.9.8",
 	"manifest_version": 2,
 	"description": "Analyze and highlight the keywords and meta tags on the page",
 	"homepage_url": "https://chrome.google.com/webstore/detail/seo-meta-helper/ophnbpddglgmhejmapegoopggbelkeep",
 	"icons": {
-		"128":"icon128.png"
+		"128": "icon128.png"
 	},
-    "browser_action": {
-        "default_title": "SEO meta helper",
-        "default_icon": "icon48.png",
-        "default_popup": "popup.html"
-    },
+	"browser_action": {
+		"default_title": "SEO meta helper",
+		"default_icon": "icon48.png",
+		"default_popup": "popup.html"
+	},
 	"background": {
-		"scripts": ["bg.js","popup.js"]
+		"scripts": ["bg.js", "popup.js"]
 	},
 	"permissions": ["tabs", "storage", "<all_urls>"],
-	"content_scripts": [
-        {
-          "matches": ["<all_urls>"],
-          "css": ["fix.css"],
-          "js": ["content_script.js"]
-        }
-    ],
-    "web_accessible_resources": ["copy.svg"]
+	"content_scripts": [{
+		"matches": ["<all_urls>"],
+		"css": ["fix.css"],
+		"js": ["content_script.js"]
+	}],
+	"web_accessible_resources": ["copy.svg"]
 }
